--- a/Shop.html
+++ b/Shop.html
@@ -304,7 +304,7 @@
         // ตัวแปรและฟังก์ชันเริ่มต้น
         const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwfbWn6ZpgAIl--xzu_vUZV_0xCOj_rtTsrt88hgR2czpRxy03r7OPgp2OW1jyaTBkH/exec";
         const WEB_MEMBER_APP_URL = "https://script.google.com/macros/s/AKfycbwS9aCm2B3zeUeke1F2nKhXx83QwrLc4KF97t01Sek9yh4dzoJlD3ieMXo_Iru74ab9uQ/exec";
-        const LIFF_ID = '2006699517-JN1XRWP2'; // เปลี่ยนเป็น LIFF ID ของคุณ
+        const LIFF_ID = '2007210928-LjGwk75o'; // เปลี่ยนเป็น LIFF ID ของคุณ
 
         let shippingOptions = [];
         let selectedShipping = null;
