--- a/Shop.html
+++ b/Shop.html
@@ -72,9 +72,9 @@
             overflow: hidden !important;
         }
 
-        button.swal2-confirm.swal2-styled {
+/*         button.swal2-confirm.swal2-styled {
             display: none !important;
-        }
+        } */
 
         .swal2-title {
             font-size: 1rem !important;
