--- a/Shopv2.html
+++ b/Shopv2.html
@@ -328,9 +328,10 @@
   <!-- สคริปต์หลัก -->
   <script defer>
     // ตัวแปรและฟังก์ชันเริ่มต้น
-    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzi3Mca-TzwiOGqtnwFn9t_UTl3yzY_wGEQT4PdvFrVI-sgz72SFrFHLOH0V0TEo3-m8Q/exec";
-    const WEB_MEMBER_APP_URL = "https://script.google.com/macros/s/AKfycbza8DgaVCUAhemxKpWjXNhk9meZAsSlMTzM1ZJVR2l4whSSxh8QYtmd4QfeRCNIJfPq7Q/exec";
-    const LIFF_ID = '2006974351-0GWowwVZ';
+        const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwfbWn6ZpgAIl--xzu_vUZV_0xCOj_rtTsrt88hgR2czpRxy03r7OPgp2OW1jyaTBkH/exec";
+        const WEB_MEMBER_APP_URL = "https://script.google.com/macros/s/AKfycbwS9aCm2B3zeUeke1F2nKhXx83QwrLc4KF97t01Sek9yh4dzoJlD3ieMXo_Iru74ab9uQ/exec";
+        const LIFF_ID = '2007210928-LjGwk75o'; // เปลี่ยนเป็น LIFF ID ของคุณ
+
 
     let shippingOptions = [];
     let selectedShipping = null;
