--- a/Shopv2.html
+++ b/Shopv2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Aero Shop</title>
+  <title>Shop</title>
   <!-- ฟอนต์ภาษาไทย -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai&display=swap" rel="stylesheet" />
   <!-- สไตล์สำหรับ Swiper.js -->
