--- a/Shopv2.html
+++ b/Shopv2.html
@@ -774,12 +774,11 @@
       //   }
       // });
 
-      const otherOption = document.createElement('option');
-      otherOption.value = 'Other';
-      otherOption.textContent = 'ระบุเอง';
-      sizeSelect.appendChild(otherOption);
-
-      rowContainer.appendChild(sizeSelect);
+      // const otherOption = document.createElement('option');
+      // otherOption.value = 'Other';
+      // otherOption.textContent = 'ระบุเอง';
+      // sizeSelect.appendChild(otherOption);
+      // rowContainer.appendChild(sizeSelect);
 
       const addToCartBtn = document.createElement('button');
       addToCartBtn.classList.add('bg-[var(--accent-color)]', 'p-2', 'rounded-xl', 'font-bold', 'focus:outline-none', 'focus:ring-2', 'add-to-cart');
