--- a/Shopv2.html
+++ b/Shopv2.html
@@ -277,8 +277,8 @@
             </div>
             <!-- ฟิลด์เพิ่มข้อมูลเลขรหัสประชาชน -->
             <div class="mb-4">
-              <label for="citizenid" class="block text-[var(--secondary-color)]">เลขรหัสประชาชน</label>
-              <input type="text" id="citizenid" placeholder="กรอกเลขรหัสประชาชน" class="block w-full mb-2 p-2 border rounded-xl focus:outline-none" required />
+              <label for="citizenid" class="block text-[var(--secondary-color)]">อีเมล</label>
+              <input type="email" id="citizenid" placeholder="อีเมล" class="block w-full mb-2 p-2 border rounded-xl focus:outline-none" required />
             </div>
             <div class="mb-4">
               <label for="address" class="block text-[var(--secondary-color)]">ที่อยู่</label>
