--- a/Admin.html
+++ b/Admin.html
@@ -25,13 +25,13 @@
     <!-- ตาราง -->
     <div id="data-table-container" class="overflow-x-auto">
       <table id="data-table" class="min-w-full border-collapse text-sm">
-        <thead class="bg-blue-900 text-white text-sm">
+        <thead>
           <tr>
-            <th class="px-4 py-2 text-left">วันที่</th>
-            <th class="px-4 py-2 text-left">ชื่อ ลูกค้า</th>
-            <th class="px-4 py-2 text-left">ราคา</th>
-            <th class="px-4 py-2 text-left">สถานะ</th>
-            <th class="px-4 py-2 text-left">คำสั่ง</th>
+            <th class="bg-white text-black px-4 py-2 text-left py-2 px-4 shadow-sm border-b rounded-tl-xl">วันที่</th>
+            <th class="bg-white text-black px-4 py-2 text-left shadow-sm border-b ">ชื่อ ลูกค้า</th>
+            <th class="bg-white text-black px-4 py-2 text-left shadow-sm border-b ">ราคา</th>
+            <th class="bg-white text-black px-4 py-2 text-left shadow-sm border-b ">สถานะ</th>
+            <th class="bg-white text-black px-4 py-2 text-left shadow-sm border-b rounded-tr-xl">คำสั่ง</th>
           </tr>
         </thead>
         <tbody id="data-tbody" class="bg-white">
