--- a/Admin.html
+++ b/Admin.html
@@ -222,7 +222,7 @@
         // (3) ราคา
         const priceCell = document.createElement('td');
         priceCell.className = 'px-4 py-2';
-        priceCell.textContent = `${order.totalPrice.toFixed(2)} บาท`;
+        priceCell.textContent = `${order.totalPrice.toFixed(2)}`;
 
         // (4) สถานะ
         const statusCell = document.createElement('td');
