--- a/History.html
+++ b/History.html
@@ -48,16 +48,19 @@
 </head>
 
 <body class="bg-slate-50 min-h-screen">
-  <!-- Loading Screen -->
-  <div id="loading-screen" class="fixed inset-0 flex items-center justify-center bg-[#F5F8FD] z-50">
-    <div class="text-center">
-      <div class="relative flex w-48">
-        <div class="flex-1">
-            <img src="https://lh5.googleusercontent.com/d/1MoIcHrUlOtTV46t5CI3bYwT0cGQBh7PB" alt="Flying Object" class="flying-image w-48 mx-auto">
+  <!-- Loading Screen แสดงก่อนเนื้อหาหลัก -->
+    <div id="loading-screen" class="fixed inset-0 flex items-center justify-center bg-[#F5F8FD] z-50">
+        <div class="text-center">
+            <div class="relative flex w-64 animate-pulse gap-2 p-4">
+                <div class="h-12 w-12 rounded-full bg-slate-400"></div>
+                <div class="flex-1">
+                    <div class="mb-1 h-5 w-3/5 rounded-lg bg-slate-400 text-lg"></div>
+                    <div class="h-5 w-[90%] rounded-lg bg-slate-400 text-sm"></div>
+                </div>
+                <div class="absolute bottom-5 right-0 h-4 w-4 rounded-full bg-slate-400"></div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
     <div class="main-shop">
         <!-- Product Selection -->
         <div id="product-selection" class="max-w-md mx-auto pt-20">
