--- a/Shopv2.html
+++ b/Shopv2.html
@@ -21,8 +21,8 @@
   <style>
         :root {
             --primary-color: #ffffff;
-            --secondary-color: #000000;
-            --accent-color: #209f84;
+            --secondary-color: #0E1824;
+            --accent-color: #C51D1D;
             --white-color: #ffffff;
         }
 
